--- a/acessibilidade.html
+++ b/acessibilidade.html
@@ -11,15 +11,6 @@
 <body>
     <header>
         <h1>Portal da acessibilidade - O que é acessibilidade?</h1>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Início</a></li>
-                <li><a href="./acessibilidade.html">O que é acessibilidade?</a></li>
-                <li><a href="./ferramentas.html">Ferramentas</a></li>
-                <li><a href="./exemplos.html">Exemplos</a></li>
-                <li><a href="./contato.html">Contato</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
@@ -47,6 +38,16 @@
             </blockquote>
         </section>
     </main>
+
+    <nav>
+        <ul>
+            <li><a href="./index.html">Início</a></li>
+            <li><a href="./acessibilidade.html" aria-current="page">O que é acessibilidade?</a></li>
+            <li><a href="./ferramentas.html">Ferramentas</a></li>
+            <li><a href="./exemplos.html">Exemplos</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+        </ul>
+    </nav>
 
     <footer>
         <p>&copy; 2024 - Portal da acessibilidade | Criado por Igor Thiago</p>
