--- a/exemplos.html
+++ b/exemplos.html
@@ -19,24 +19,24 @@
             <p>Confira como práticas de acessibilidade transformam experiências na web para usuários com diferentes necessidades.</p>
         </section>
 
-        <section class="examples">
-            <article class="example-item">
+        <section class="exemplos">
+            <article class="exemplo-item">
                 <h3>1. Leitores de Tela</h3>
                 <p>Sites como o <strong>Google</strong> e o <strong>Wikipedia</strong> implementam descrições textuais para imagens, tornando-os acessíveis a leitores de tela como o <em>NVDA</em> e o <em>JAWS</em>.</p>
             </article>
-            <article class="example-item">
+            <article class="exemplo-item">
                 <h3>2. Contraste e Cores</h3>
                 <p>O site do <strong>Governo Federal do Brasil</strong> segue as recomendações de contraste alto do WCAG, ajudando usuários com baixa visão.</p>
             </article>
-            <article class="example-item">
+            <article class="exemplo-item">
                 <h3>3. Navegação por Teclado</h3>
                 <p>Páginas como a da <strong>Apple</strong> permitem navegação completa por teclado, ideal para pessoas com dificuldades motoras.</p>
             </article>
-            <article class="example-item">
+            <article class="exemplo-item">
                 <h3>4. Subtítulos e Transcrições</h3>
                 <p>Plataformas de vídeo, como o <strong>YouTube</strong>, disponibilizam legendas automáticas, atendendo usuários com deficiência auditiva.</p>
             </article>
-            <article class="example-item">
+            <article class="exemplo-item">
                 <h3>5. Testes de Acessibilidade</h3>
                 <p>Ferramentas como o <strong>axe</strong> ajudam desenvolvedores a testar acessibilidade em sites como o <strong>GitHub</strong>.</p>
             </article>
