--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="inicio">
             <h2>Bem-vindo ao Portal da Acessibilidade</h2>
             <p>Descubra como a acessibilidade pode transformar a vida das pessoas e tornar o mundo mais inclusivo.</p>
-            <img src="./assets/acessibilidade_home.jpg" alt="Imagem representando acessibilidade e inclusão" class="hero-img">
+            <img src="./assets/acessibilidade_home.jpg" alt="Imagem representando acessibilidade e inclusão" class="inicio_img">
         </section>
 
-        <section class="about">
+        <section class="sobre_nos">
             <h2>Sobre este site</h2>
             <p>Este site foi criado para conscientizar e informar sobre a importância da acessibilidade no dia a dia.</p>
             <p>Nosso objetivo é oferecer recursos, informações e exemplos para mostrar como a inclusão pode ser implementada em diferentes contextos.</p>
@@ -45,20 +45,20 @@
             </ul>
         </section>
 
-        <section class="benefits_container">
+        <section class="beneficios_container">
                 <div>   
                     <h2>Por que a acessibilidade é importante?</h2>
                 </div>
-                <section class="benefits">
-                    <div class="benefit">
+                <section class="beneficios">
+                    <div class="beneficio">
                         <h3>Inclusão Social</h3>
                         <p>Garantir que todos possam participar ativamente da sociedade.</p>
                     </div>
-                    <div class="benefit">
+                    <div class="beneficio">
                         <h3>Melhoria de Experiências</h3>
                         <p>Acessibilidade beneficia não apenas pessoas com deficiência, mas também idosos, crianças e muito mais.</p>
                     </div>
-                    <div class="benefit">
+                    <div class="beneficio">
                         <h3>Cumprimento de Leis</h3>
                         <p>Estar em conformidade com normas e regulamentações internacionais.</p>
                     </div>
