--- a/acessibilidade.html
+++ b/acessibilidade.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <section class="introduction">
+        <section class="introducao">
             <h2>O que é Acessibilidade?</h2>
             <p>
                 Acessibilidade é o conjunto de práticas e diretrizes que permitem que todos os indivíduos, 
@@ -23,7 +23,7 @@
             </p>
         </section>
 
-        <section class="examples">
+        <section class="exemplos">
             <h2>Exemplos de Acessibilidade</h2>
             <ul>
                 <li><strong>Ambientes Físicos:</strong> Rampas de acesso, corrimãos e pisos táteis.</li>
@@ -32,7 +32,7 @@
             </ul>
         </section>
 
-        <section class="quote">
+        <section class="citacao">
             <blockquote>
                 "Acessibilidade não é apenas uma questão de direitos, mas também de criar um mundo mais justo e funcional para todos."
             </blockquote>
