--- a/ferramentas.html
+++ b/ferramentas.html
@@ -23,7 +23,7 @@
             </p>
         </section>
 
-        <section class="tools">
+        <section class="ferramentas">
             <h3>Principais Ferramentas</h3>
             <ul>
                 <li>
@@ -45,7 +45,7 @@
             </ul>
         </section>
 
-        <section class="resources">
+        <section class="recursos">
             <h3>Plataformas Úteis</h3>
             <p>Explore serviços e plataformas que promovem acessibilidade digital:</p>
             <ul>
